QtGui/gen_qevent.h

typedef struct QExposeEvent QExposeEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputDevice QInputDevice;
typedef struct QKeyCombination QKeyCombination;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QNativeGestureEvent QNativeGestureEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPlatformSurfaceEvent QPlatformSurfaceEvent;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointingDevice QPointingDevice;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
QNativeGestureEvent* QNativeGestureEvent_new2(int type, QPointingDevice* dev, int fingerCount, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, QPointF* delta);
QNativeGestureEvent* QNativeGestureEvent_new3(int type, QPointingDevice* dev, int fingerCount, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, QPointF* delta, unsigned long long sequenceId);
QNativeGestureEvent* QNativeGestureEvent_clone(const QNativeGestureEvent* self);
int QNativeGestureEvent_gestureType(const QNativeGestureEvent* self);
int QNativeGestureEvent_fingerCount(const QNativeGestureEvent* self);
double QNativeGestureEvent_value(const QNativeGestureEvent* self);
QPointF* QNativeGestureEvent_delta(const QNativeGestureEvent* self);
QPoint* QNativeGestureEvent_pos(const QNativeGestureEvent* self);
QPoint* QNativeGestureEvent_globalPos(const QNativeGestureEvent* self);
QPointF* QNativeGestureEvent_localPos(const QNativeGestureEvent* self);
QPointF* QNativeGestureEvent_windowPos(const QNativeGestureEvent* self);
QPointF* QNativeGestureEvent_screenPos(const QNativeGestureEvent* self);
bool QNativeGestureEvent_override_virtual_clone(void* self, intptr_t slot);
QNativeGestureEvent* QNativeGestureEvent_virtualbase_clone(const void* self);
bool QNativeGestureEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QNativeGestureEvent_virtualbase_isBeginEvent(const void* self);
bool QNativeGestureEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QNativeGestureEvent_virtualbase_isUpdateEvent(const void* self);
bool QNativeGestureEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QNativeGestureEvent_virtualbase_isEndEvent(const void* self);
bool QNativeGestureEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QNativeGestureEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QNativeGestureEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QNativeGestureEvent_virtualbase_setAccepted(void* self, bool accepted);
void QNativeGestureEvent_delete(QNativeGestureEvent* self);
QKeyEvent* QKeyEvent_new(int type, int key, int modifiers);
QKeyEvent* QKeyEvent_new2(int type, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers);
QKeyEvent* QKeyEvent_new3(int type, int key, int modifiers, struct miqt_string text);
QKeyEvent* QKeyEvent_new4(int type, int key, int modifiers, struct miqt_string text, bool autorep);
QKeyEvent* QKeyEvent_new5(int type, int key, int modifiers, struct miqt_string text, bool autorep, uint16_t count);
QKeyEvent* QKeyEvent_new6(int type, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, struct miqt_string text);
QKeyEvent* QKeyEvent_new7(int type, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, struct miqt_string text, bool autorep);
QKeyEvent* QKeyEvent_new8(int type, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, struct miqt_string text, bool autorep, uint16_t count);
QKeyEvent* QKeyEvent_new9(int type, int key, int modifiers, unsigned int nativeScanCode, unsigned int nativeVirtualKey, unsigned int nativeModifiers, struct miqt_string text, bool autorep, uint16_t count, QInputDevice* device);
QKeyEvent* QKeyEvent_clone(const QKeyEvent* self);
int QKeyEvent_key(const QKeyEvent* self);
bool QKeyEvent_matches(const QKeyEvent* self, int key);
int QKeyEvent_modifiers(const QKeyEvent* self);
QKeyCombination* QKeyEvent_keyCombination(const QKeyEvent* self);
struct miqt_string QKeyEvent_text(const QKeyEvent* self);
bool QKeyEvent_isAutoRepeat(const QKeyEvent* self);
int QKeyEvent_count(const QKeyEvent* self);
unsigned int QKeyEvent_nativeScanCode(const QKeyEvent* self);
unsigned int QKeyEvent_nativeVirtualKey(const QKeyEvent* self);
unsigned int QKeyEvent_nativeModifiers(const QKeyEvent* self);
bool QKeyEvent_override_virtual_clone(void* self, intptr_t slot);
QKeyEvent* QKeyEvent_virtualbase_clone(const void* self);
bool QKeyEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QKeyEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QKeyEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QKeyEvent_virtualbase_setAccepted(void* self, bool accepted);
void QKeyEvent_delete(QKeyEvent* self);
QFocusEvent* QFocusEvent_new(int type);
QFocusEvent* QFocusEvent_new2(int type, int reason);
QFocusEvent* QFocusEvent_clone(const QFocusEvent* self);
bool QFocusEvent_gotFocus(const QFocusEvent* self);
bool QFocusEvent_lostFocus(const QFocusEvent* self);
int QFocusEvent_reason(const QFocusEvent* self);
bool QFocusEvent_override_virtual_clone(void* self, intptr_t slot);
QFocusEvent* QFocusEvent_virtualbase_clone(const void* self);
bool QFocusEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QFocusEvent_virtualbase_setAccepted(void* self, bool accepted);
void QFocusEvent_delete(QFocusEvent* self);
QPaintEvent* QPaintEvent_new(QRegion* paintRegion);
QPaintEvent* QPaintEvent_new2(QRect* paintRect);
QPaintEvent* QPaintEvent_clone(const QPaintEvent* self);
QRect* QPaintEvent_rect(const QPaintEvent* self);
QRegion* QPaintEvent_region(const QPaintEvent* self);
bool QPaintEvent_override_virtual_clone(void* self, intptr_t slot);
QPaintEvent* QPaintEvent_virtualbase_clone(const void* self);
bool QPaintEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QPaintEvent_virtualbase_setAccepted(void* self, bool accepted);
void QPaintEvent_delete(QPaintEvent* self);
QMoveEvent* QMoveEvent_new(QPoint* pos, QPoint* oldPos);
QMoveEvent* QMoveEvent_clone(const QMoveEvent* self);
QPoint* QMoveEvent_pos(const QMoveEvent* self);
QPoint* QMoveEvent_oldPos(const QMoveEvent* self);
bool QMoveEvent_override_virtual_clone(void* self, intptr_t slot);
QMoveEvent* QMoveEvent_virtualbase_clone(const void* self);
bool QMoveEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QMoveEvent_virtualbase_setAccepted(void* self, bool accepted);
void QMoveEvent_delete(QMoveEvent* self);
QExposeEvent* QExposeEvent_new(QRegion* m_region);
QExposeEvent* QExposeEvent_clone(const QExposeEvent* self);
QRegion* QExposeEvent_region(const QExposeEvent* self);
bool QExposeEvent_override_virtual_clone(void* self, intptr_t slot);
QExposeEvent* QExposeEvent_virtualbase_clone(const void* self);
bool QExposeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QExposeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QExposeEvent_delete(QExposeEvent* self);
QPlatformSurfaceEvent* QPlatformSurfaceEvent_new(int surfaceEventType);
QPlatformSurfaceEvent* QPlatformSurfaceEvent_clone(const QPlatformSurfaceEvent* self);
int QPlatformSurfaceEvent_surfaceEventType(const QPlatformSurfaceEvent* self);
bool QPlatformSurfaceEvent_override_virtual_clone(void* self, intptr_t slot);
QPlatformSurfaceEvent* QPlatformSurfaceEvent_virtualbase_clone(const void* self);
bool QPlatformSurfaceEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QPlatformSurfaceEvent_virtualbase_setAccepted(void* self, bool accepted);
void QPlatformSurfaceEvent_delete(QPlatformSurfaceEvent* self);
QResizeEvent* QResizeEvent_new(QSize* size, QSize* oldSize);
QResizeEvent* QResizeEvent_clone(const QResizeEvent* self);
QSize* QResizeEvent_size(const QResizeEvent* self);
QSize* QResizeEvent_oldSize(const QResizeEvent* self);