qt6/gen_qevent.nim

proc fcQNativeGestureEvent_new2(typeVal: cint, dev: pointer, fingerCount: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, value: float64, delta: pointer): ptr cQNativeGestureEvent {.importc: "QNativeGestureEvent_new2".}
proc fcQNativeGestureEvent_new3(typeVal: cint, dev: pointer, fingerCount: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, value: float64, delta: pointer, sequenceId: culonglong): ptr cQNativeGestureEvent {.importc: "QNativeGestureEvent_new3".}
proc fcQNativeGestureEvent_clone(self: pointer, ): pointer {.importc: "QNativeGestureEvent_clone".}
proc fcQNativeGestureEvent_gestureType(self: pointer, ): cint {.importc: "QNativeGestureEvent_gestureType".}
proc fcQNativeGestureEvent_fingerCount(self: pointer, ): cint {.importc: "QNativeGestureEvent_fingerCount".}
proc fcQNativeGestureEvent_value(self: pointer, ): float64 {.importc: "QNativeGestureEvent_value".}
proc fcQNativeGestureEvent_delta(self: pointer, ): pointer {.importc: "QNativeGestureEvent_delta".}
proc fcQNativeGestureEvent_pos(self: pointer, ): pointer {.importc: "QNativeGestureEvent_pos".}
proc fcQNativeGestureEvent_globalPos(self: pointer, ): pointer {.importc: "QNativeGestureEvent_globalPos".}
proc fcQNativeGestureEvent_localPos(self: pointer, ): pointer {.importc: "QNativeGestureEvent_localPos".}
proc fcQNativeGestureEvent_windowPos(self: pointer, ): pointer {.importc: "QNativeGestureEvent_windowPos".}
proc fcQNativeGestureEvent_screenPos(self: pointer, ): pointer {.importc: "QNativeGestureEvent_screenPos".}
proc fQNativeGestureEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QNativeGestureEvent_virtualbase_clone".}
proc fcQNativeGestureEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_clone".}
proc fQNativeGestureEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QNativeGestureEvent_virtualbase_isBeginEvent".}
proc fcQNativeGestureEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_isBeginEvent".}
proc fQNativeGestureEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QNativeGestureEvent_virtualbase_isUpdateEvent".}
proc fcQNativeGestureEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_isUpdateEvent".}
proc fQNativeGestureEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QNativeGestureEvent_virtualbase_isEndEvent".}
proc fcQNativeGestureEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_isEndEvent".}
proc fQNativeGestureEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QNativeGestureEvent_virtualbase_setTimestamp".}
proc fcQNativeGestureEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_setTimestamp".}
proc fQNativeGestureEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QNativeGestureEvent_virtualbase_setAccepted".}
proc fcQNativeGestureEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QNativeGestureEvent_override_virtual_setAccepted".}
proc fcQNativeGestureEvent_delete(self: pointer) {.importc: "QNativeGestureEvent_delete".}
proc fcQKeyEvent_new(typeVal: cint, key: cint, modifiers: cint): ptr cQKeyEvent {.importc: "QKeyEvent_new".}
proc fcQKeyEvent_new2(typeVal: cint, key: cint, modifiers: cint, nativeScanCode: cuint, nativeVirtualKey: cuint, nativeModifiers: cuint): ptr cQKeyEvent {.importc: "QKeyEvent_new2".}
proc fcQKeyEvent_new3(typeVal: cint, key: cint, modifiers: cint, text: struct_miqt_string): ptr cQKeyEvent {.importc: "QKeyEvent_new3".}
proc fcQKeyEvent_new4(typeVal: cint, key: cint, modifiers: cint, text: struct_miqt_string, autorep: bool): ptr cQKeyEvent {.importc: "QKeyEvent_new4".}
proc fcQKeyEvent_new5(typeVal: cint, key: cint, modifiers: cint, text: struct_miqt_string, autorep: bool, count: cushort): ptr cQKeyEvent {.importc: "QKeyEvent_new5".}
proc fcQKeyEvent_new6(typeVal: cint, key: cint, modifiers: cint, nativeScanCode: cuint, nativeVirtualKey: cuint, nativeModifiers: cuint, text: struct_miqt_string): ptr cQKeyEvent {.importc: "QKeyEvent_new6".}
proc fcQKeyEvent_new7(typeVal: cint, key: cint, modifiers: cint, nativeScanCode: cuint, nativeVirtualKey: cuint, nativeModifiers: cuint, text: struct_miqt_string, autorep: bool): ptr cQKeyEvent {.importc: "QKeyEvent_new7".}
proc fcQKeyEvent_new8(typeVal: cint, key: cint, modifiers: cint, nativeScanCode: cuint, nativeVirtualKey: cuint, nativeModifiers: cuint, text: struct_miqt_string, autorep: bool, count: cushort): ptr cQKeyEvent {.importc: "QKeyEvent_new8".}
proc fcQKeyEvent_new9(typeVal: cint, key: cint, modifiers: cint, nativeScanCode: cuint, nativeVirtualKey: cuint, nativeModifiers: cuint, text: struct_miqt_string, autorep: bool, count: cushort, device: pointer): ptr cQKeyEvent {.importc: "QKeyEvent_new9".}
proc fcQKeyEvent_clone(self: pointer, ): pointer {.importc: "QKeyEvent_clone".}
proc fcQKeyEvent_key(self: pointer, ): cint {.importc: "QKeyEvent_key".}
proc fcQKeyEvent_matches(self: pointer, key: cint): bool {.importc: "QKeyEvent_matches".}
proc fcQKeyEvent_modifiers(self: pointer, ): cint {.importc: "QKeyEvent_modifiers".}
proc fcQKeyEvent_keyCombination(self: pointer, ): pointer {.importc: "QKeyEvent_keyCombination".}
proc fcQKeyEvent_text(self: pointer, ): struct_miqt_string {.importc: "QKeyEvent_text".}
proc fcQKeyEvent_isAutoRepeat(self: pointer, ): bool {.importc: "QKeyEvent_isAutoRepeat".}
proc fcQKeyEvent_count(self: pointer, ): cint {.importc: "QKeyEvent_count".}
proc fcQKeyEvent_nativeScanCode(self: pointer, ): cuint {.importc: "QKeyEvent_nativeScanCode".}
proc fcQKeyEvent_nativeVirtualKey(self: pointer, ): cuint {.importc: "QKeyEvent_nativeVirtualKey".}
proc fcQKeyEvent_nativeModifiers(self: pointer, ): cuint {.importc: "QKeyEvent_nativeModifiers".}
proc fQKeyEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QKeyEvent_virtualbase_clone".}
proc fcQKeyEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QKeyEvent_override_virtual_clone".}
proc fQKeyEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QKeyEvent_virtualbase_setTimestamp".}
proc fcQKeyEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QKeyEvent_override_virtual_setTimestamp".}
proc fQKeyEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QKeyEvent_virtualbase_setAccepted".}
proc fcQKeyEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QKeyEvent_override_virtual_setAccepted".}
proc fcQKeyEvent_delete(self: pointer) {.importc: "QKeyEvent_delete".}
proc fcQFocusEvent_new(typeVal: cint): ptr cQFocusEvent {.importc: "QFocusEvent_new".}
proc fcQFocusEvent_new2(typeVal: cint, reason: cint): ptr cQFocusEvent {.importc: "QFocusEvent_new2".}
proc fcQFocusEvent_clone(self: pointer, ): pointer {.importc: "QFocusEvent_clone".}
proc fcQFocusEvent_gotFocus(self: pointer, ): bool {.importc: "QFocusEvent_gotFocus".}
proc fcQFocusEvent_lostFocus(self: pointer, ): bool {.importc: "QFocusEvent_lostFocus".}
proc fcQFocusEvent_reason(self: pointer, ): cint {.importc: "QFocusEvent_reason".}
proc fQFocusEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QFocusEvent_virtualbase_clone".}
proc fcQFocusEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QFocusEvent_override_virtual_clone".}
proc fQFocusEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QFocusEvent_virtualbase_setAccepted".}
proc fcQFocusEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QFocusEvent_override_virtual_setAccepted".}
proc fcQFocusEvent_delete(self: pointer) {.importc: "QFocusEvent_delete".}
proc fcQPaintEvent_new(paintRegion: pointer): ptr cQPaintEvent {.importc: "QPaintEvent_new".}
proc fcQPaintEvent_new2(paintRect: pointer): ptr cQPaintEvent {.importc: "QPaintEvent_new2".}
proc fcQPaintEvent_clone(self: pointer, ): pointer {.importc: "QPaintEvent_clone".}
proc fcQPaintEvent_rect(self: pointer, ): pointer {.importc: "QPaintEvent_rect".}
proc fcQPaintEvent_region(self: pointer, ): pointer {.importc: "QPaintEvent_region".}
proc fQPaintEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QPaintEvent_virtualbase_clone".}
proc fcQPaintEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QPaintEvent_override_virtual_clone".}
proc fQPaintEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QPaintEvent_virtualbase_setAccepted".}
proc fcQPaintEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QPaintEvent_override_virtual_setAccepted".}
proc fcQPaintEvent_delete(self: pointer) {.importc: "QPaintEvent_delete".}
proc fcQMoveEvent_new(pos: pointer, oldPos: pointer): ptr cQMoveEvent {.importc: "QMoveEvent_new".}
proc fcQMoveEvent_clone(self: pointer, ): pointer {.importc: "QMoveEvent_clone".}
proc fcQMoveEvent_pos(self: pointer, ): pointer {.importc: "QMoveEvent_pos".}
proc fcQMoveEvent_oldPos(self: pointer, ): pointer {.importc: "QMoveEvent_oldPos".}
proc fQMoveEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QMoveEvent_virtualbase_clone".}
proc fcQMoveEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QMoveEvent_override_virtual_clone".}
proc fQMoveEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QMoveEvent_virtualbase_setAccepted".}
proc fcQMoveEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QMoveEvent_override_virtual_setAccepted".}
proc fcQMoveEvent_delete(self: pointer) {.importc: "QMoveEvent_delete".}
proc fcQExposeEvent_new(m_region: pointer): ptr cQExposeEvent {.importc: "QExposeEvent_new".}
proc fcQExposeEvent_clone(self: pointer, ): pointer {.importc: "QExposeEvent_clone".}
proc fcQExposeEvent_region(self: pointer, ): pointer {.importc: "QExposeEvent_region".}
proc fQExposeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QExposeEvent_virtualbase_clone".}
proc fcQExposeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QExposeEvent_override_virtual_clone".}
proc fQExposeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QExposeEvent_virtualbase_setAccepted".}
proc fcQExposeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QExposeEvent_override_virtual_setAccepted".}
proc fcQExposeEvent_delete(self: pointer) {.importc: "QExposeEvent_delete".}
proc fcQPlatformSurfaceEvent_new(surfaceEventType: cint): ptr cQPlatformSurfaceEvent {.importc: "QPlatformSurfaceEvent_new".}
proc fcQPlatformSurfaceEvent_clone(self: pointer, ): pointer {.importc: "QPlatformSurfaceEvent_clone".}
proc fcQPlatformSurfaceEvent_surfaceEventType(self: pointer, ): cint {.importc: "QPlatformSurfaceEvent_surfaceEventType".}
proc fQPlatformSurfaceEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QPlatformSurfaceEvent_virtualbase_clone".}
proc fcQPlatformSurfaceEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QPlatformSurfaceEvent_override_virtual_clone".}
proc fQPlatformSurfaceEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QPlatformSurfaceEvent_virtualbase_setAccepted".}
proc fcQPlatformSurfaceEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QPlatformSurfaceEvent_override_virtual_setAccepted".}
proc fcQPlatformSurfaceEvent_delete(self: pointer) {.importc: "QPlatformSurfaceEvent_delete".}
proc fcQResizeEvent_new(size: pointer, oldSize: pointer): ptr cQResizeEvent {.importc: "QResizeEvent_new".}
proc fcQResizeEvent_clone(self: pointer, ): pointer {.importc: "QResizeEvent_clone".}
proc fcQResizeEvent_size(self: pointer, ): pointer {.importc: "QResizeEvent_size".}
proc fcQResizeEvent_oldSize(self: pointer, ): pointer {.importc: "QResizeEvent_oldSize".}
